--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'com.android.application'
 
-    id 'com.google.gms.google-services'    // Google services plugin
-    id 'com.google.firebase.crashlytics'   // Crashlytics
+ //   id 'com.google.gms.google-services'    // Google services plugin
+ //   id 'com.google.firebase.crashlytics'   // Crashlytics
 
     // Kotlin
     id 'kotlin-android'
@@ -75,10 +75,10 @@ dependencies {
     implementation "com.google.android.material:material:$version_material"
 
     /** Firebase */
-    implementation platform('com.google.firebase:firebase-bom:26.6.0')
+//    implementation platform('com.google.firebase:firebase-bom:26.6.0')
     // Declare the dependencies for the Crashlytics and Analytics libraries
     // When using the BoM, you don't specify versions in Firebase library dependencies
-    implementation 'com.google.firebase:firebase-crashlytics'
+ //   implementation 'com.google.firebase:firebase-crashlytics'
 
     /** Lifecycle */
     // ViewModel
