--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,10 @@ buildscript {
 
 
         /** Google service */
-        classpath 'com.google.gms:google-services:4.3.5'
+     //   classpath 'com.google.gms:google-services:4.3.5'
 
         /** Crashlytics */
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.1'
+     //   classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.1'
 
 
     }
